[package]
name = "divvy_wealth"
version = "0.0.1"
authors = ["Benevio Labs <hello@benevio.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
near-sdk = {version = "5.5.0", features = ["unit-testing"] }

near-contract-standards = "5.5.0"
borsh = "1.5.1"
serde = "1.0.214"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
