[package]
name = "divvy_wealth"
version = "0.0.1"
authors = ["Benevio Labs <hello@benevio.dev>"]
edition = "2021"
repository = "https://github.com/charleslavon/divvy-contracts"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
near-sdk = {version = "5.5.0", features = ["unit-testing"] }
lazy_static = "1.4.0"

near-contract-standards = "5.5.0"
borsh = "1.5.1"
serde = "1.0.214"

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.12.1-rust-1.82.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:841e72af53e151e3d8f65ef2e50dcec162699d876348a8ec0e77b6cdede667d9"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build"]


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
